--- a/Caméra 6-init.ini
+++ b/Caméra 6-init.ini
@@ -1,14 +1,14 @@
 ["Config Acquisition"]
 "Camera name" = "Cam121"
-Gain = 302.0
+Gain = 200.0
 "Shutter(us)" = 2500.0
-ROI = true
+ROI = false
 Palette = 0
-ModelName = "acA640-121gm"
+ModelName = ""
 
 ["Config Acquisition"."ROI coor"]
-Left = 189
-Top = 285
-Right = 285
-Bottom = 395
+Left = 0
+Top = 0
+Right = 0
+Bottom = 0
 Rotation = 0.0
