Ajout visu erreur apres init caméra

--- a/Camview Container data.ini
+++ b/Camview Container data.ini
@@ -1,7 +1,7 @@
 ["Ctrl Config"]
-"Caméra CP" = true
-"Caméra CL" = true
-"Caméra 3" = true
-"Caméra 4" = true
-"Caméra 5" = true
-"Caméra 6" = true
+"Caméra 1" = true
+"Caméra 2" = false
+"Caméra 3" = false
+"Caméra 4" = false
+"Caméra 5" = false
+"Caméra 6" = false
