ajout d'une nouvelle caméra

--- a/Camview Container data.ini
+++ b/Camview Container data.ini
@@ -1,6 +1,6 @@
 ["Ctrl Config"]
 "Caméra 1" = true
-"Caméra 2" = false
+"Caméra 2" = true
 "Caméra 3" = false
 "Caméra 4" = false
 "Caméra 5" = false
