Ajout gain et shutter + profile

--- a/Caméra 1-init.ini
+++ b/Caméra 1-init.ini
@@ -5,6 +5,9 @@ Gain = 320.0
 ROI = true
 Palette = 5
 ModelName = "scA640-70gm"
+"Pos X Ch" = 0
+"Pos Y Ch" = 0
+Crosshair = true
 
 ["Config Acquisition"."ROI coor"]
 Left = 164
