--- a/Caméra 2-init.ini
+++ b/Caméra 2-init.ini
@@ -1,10 +1,13 @@
 ["Config Acquisition"]
 "Camera name" = "cam122"
-Gain = 200.0
+Gain = 350.0
 "Shutter(us)" = 10000.0
 ROI = true
 Palette = 5
 ModelName = "acA4024-8gm"
+"Pos X Ch" = 0
+"Pos Y Ch" = 0
+Crosshair = true
 
 ["Config Acquisition"."ROI coor"]
 Left = 831
