Ajout bouton profile couleur

--- a/Caméra 2-init.ini
+++ b/Caméra 2-init.ini
@@ -1,12 +1,12 @@
 ["Config Acquisition"]
 "Camera name" = "cam122"
-Gain = 350.0
-"Shutter(us)" = 10000.0
-ROI = true
-Palette = 5
+Gain = 900.0
+"Shutter(us)" = 20000.0
+ROI = false
+Palette = 0
 ModelName = "acA4024-8gm"
-"Pos X Ch" = 0
-"Pos Y Ch" = 0
+"Pos X Ch" = 1200
+"Pos Y Ch" = 1300
 Crosshair = true
 
 ["Config Acquisition"."ROI coor"]
