ajout calcul sigma

--- a/Caméra 1-init.ini
+++ b/Caméra 1-init.ini
@@ -3,11 +3,13 @@
 Gain = 350.0
 "Shutter(us)" = 1000.0
 ROI = true
-Palette = 0
+Palette = 5
 ModelName = "scA640-70gm"
-"Pos X Ch" = 506
-"Pos Y Ch" = 289
+"Pos X Ch" = 296
+"Pos Y Ch" = 229
 Crosshair = true
+"Couleur prof" = 1224191
+Profile = true
 
 ["Config Acquisition"."ROI coor"]
 Left = 164
