--- a/Caméra 2-init.ini
+++ b/Caméra 2-init.ini
@@ -2,16 +2,18 @@
 "Camera name" = "cam122"
 Gain = 900.0
 "Shutter(us)" = 20000.0
-ROI = false
+ROI = true
 Palette = 0
 ModelName = "acA4024-8gm"
-"Pos X Ch" = 1200
+"Pos X Ch" = 195
 "Pos Y Ch" = 1300
 Crosshair = true
+"Couleur prof" = 2785279
+Profile = true
 
 ["Config Acquisition"."ROI coor"]
-Left = 831
+Left = 861
 Top = 857
-Right = 3047
-Bottom = 2541
+Right = 2658
+Bottom = 1878
 Rotation = 0.0
