ajout limite gain acA2440-20gm

--- a/Caméra 1-init.ini
+++ b/Caméra 1-init.ini
@@ -1,14 +1,14 @@
 ["Config Acquisition"]
-"Camera name" = "cam4"
-Gain = 350.0
-"Shutter(us)" = 1000.0
-ROI = true
-Palette = 5
-ModelName = "scA640-70gm"
-"Pos X Ch" = 296
-"Pos Y Ch" = 229
+"Camera name" = "cam8"
+Gain = 25.0
+"Shutter(us)" = 1500.0
+ROI = false
+Palette = 3
+ModelName = "acA2440-20gm"
+"Pos X Ch" = 636
+"Pos Y Ch" = 599
 Crosshair = true
-"Couleur prof" = 1224191
+"Couleur prof" = 16448250
 Profile = true
 
 ["Config Acquisition"."ROI coor"]
